# hoj-code-sandbox

./: README.md  pom.xml
cpp_sandbox/: CMakeLists.txt  cpp_sandbox
cpp_sandbox/common/: JudgeInfoMessage.h  QuestionSubmitStatus.h
cpp_sandbox/model/: ExecuteCodeResponse.cpp  ExecuteCodeResponse.h  ExecuteMessage.cpp  ExecuteMessage.h  JudgeInfo.cpp  JudgeInfo.h  SandboxRequest.cpp  SandboxRequest.h
cpp_sandbox/sandbox/: cgroup.cpp  cgroup.h  compile.cpp  compile.h  execute.cpp  execute.h  sandbox.cpp
cpp_sandbox/utils/: FileUtils.cpp  FileUtils.h  NamespaceUtils.h
src/main/java/com/mirror/hoj/codesandbox/: CodeSandbox.java  HojCodeSandboxApplication.java  JavaCodeSandboxTemplate.java  JavaDockerCodeSandbox.java  JavaDockerCodeSandboxOld.java  JavaNativeCodeSandbox.java  SimpleCompute.java
src/main/java/com/mirror/hoj/codesandbox/client/: CppSocketClient.java  SftpClient.java
src/main/java/com/mirror/hoj/codesandbox/controller/: MainController.java
src/main/java/com/mirror/hoj/codesandbox/docker/: DockerDemo.java
src/main/java/com/mirror/hoj/codesandbox/enums/: JudgeInfoMessageEnum.java  QuestionSubmitLanguageEnum.java  QuestionSubmitStatusEnum.java
src/main/java/com/mirror/hoj/codesandbox/manager/: CppSandboxExeManager.java
src/main/java/com/mirror/hoj/codesandbox/model/: ExecuteCodeRequest.java  JudgeInfo.java  (+2 more)
src/main/resources/: application.yml
src/main/resources/security/: DefaultSecurityManager.java
src/main/resources/testCode/SimpleComputeArgs/: Main.java
src/test/java/com/mirror/hoj/codesandbox/: HojCodeSandboxApplicationTests.java
(+4 files in other folders)
